# poc-messaging-system

./: .env.example  .gitignore  README.md  docker-compose.jms.yml  docker-compose.mqtt.yml  docker-compose.yml
java-jms-publisher/: pom.xml
java-jms-publisher/src/main/java/tech/artcoded/poc/jms/artemis/: NotifyRouteBuilder.java  PocJmsArtemisApplication.java
java-jms-publisher/src/main/resources/: application.yml
java-jms-pubsub/: .dockerignore  Dockerfile
java-jms-pubsub/src/main/java/tech/artcoded/poc/jms/artemis/: Message.java  NotifyRouteBuilder.java
java-jms-pubsub/src/main/resources/: application.yml
java-jms-pubsub/src/test/java/tech/artcoded/poc/jms/artemis/: PocJmsArtemisApplicationTests.java
nodejs-mqtt-publisher/: Dockerfile  package-lock.json  package.json  publish.js
rust-mqtt-pubsub/: Cargo.toml  Dockerfile
rust-mqtt-pubsub/src/: client.rs  main.rs
rust-mqtt-subscriber/: .dockerignore  Cargo.toml  Dockerfile
rust-mqtt-subscriber/src/: connect.rs  main.rs
