[package]
name = "mqtt_subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.16"
paho-mqtt = "0.11.0"
serde = "1.0.136"
serde_json = "1.0.79"
